# youtube-analytics-project

./: pyproject.toml  settings.py
helper/: youtube_api_manual.py
homework-2/: vdud.json
homework-5/: main.py
homework-6/: main.py
src/: channel.py  playlist.py  utils.py  video.py  youtube.py
